--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,81 @@
-privacy.html
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>隐私政策 - 纯AI工具箱</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+                         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+            line-height: 1.6;
+            margin: 0 auto;
+            max-width: 800px;
+            padding: 20px;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        h1 {
+            border-bottom: 1px solid #eee;
+            padding-bottom: 10px;
+        }
+        p {
+            margin-bottom: 1em;
+        }
+        .container {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .footer {
+            margin-top: 30px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>隐私政策 - 纯AI工具箱</h1>
+
+        <p><strong>生效日期：</strong>2025年06月03日</p>
+
+        <p>感谢您使用由 tglgx 开发的 Chrome 插件 "纯AI工具箱" (以下简称“本插件”)。</我们非常重视您的隐私。</p>
+
+        <h2>我们不收集任何个人信息</h2>
+        <p>本插件在您的浏览器本地运行，并且：</p>
+        <ul>
+            <li><strong>不收集任何个人身份信息：</strong>我们不收集、存储、使用、传输或共享任何能够识别您个人身份的信息，例如您的姓名、电子邮件地址、IP地址、位置信息等。</li>
+            <li><strong>不与服务器交互：</strong>本插件的所有功能都在您的本地计算机上执行，不与任何远程服务器进行数据通信或交互。</li>
+            <li><strong>不追踪您的浏览活动：</strong>我们不追踪或记录您的网页浏览历史、搜索记录或您与网页内容的互动。</li>
+        </ul>
+
+        <h2>用户设置的本地存储 (如果适用)</h2>
+        <p>
+            如果本插件提供了用户可配置的设置项 (例如：[此处举例，如：主题颜色、开关状态等，如果没有任何设置，则可以删除此段或修改为“本插件不存储任何用户设置”])，这些设置将仅存储在您浏览器的本地存储空间中 (通常使用 <code>chrome.storage.local</code> API)。这些数据完全由您控制，仅保存在您的计算机上，本插件不会访问、上传或与任何第三方共享这些数据。您可以通过清除浏览器缓存和数据，或卸载本插件来清除这些本地存储的设置。
+        </p>
+        <p>
+            <em>如果您不确定是否有本地存储，或者确定没有，可以将上面这段修改为：</em>
+            “本插件不在您的浏览器中存储任何用户设置或数据。”
+        </p>
+
+        <h2>第三方服务</h2>
+        <p>本插件不使用任何第三方服务来收集或处理数据。</p>
+
+        <h2>隐私政策的变更</h2>
+        <p>我们可能会不时更新本隐私政策。如果我们对本政策进行任何重大更改，我们将通过在本插件的 Chrome Web Store 页面上发布新的隐私政策来通知您。建议您定期查看本隐私政策以了解任何变更。</p>
+
+        <h2>联系我们</h2>
+        <p>如果您对本隐私政策有任何疑问，请通过以下方式与我们联系：</p>
+        <p>电子邮件：lin_wei_long@163.com</p>
+
+    </div>
+    <div class="footer">
+        <p>© 2025 tglgx。保留所有权利。</p>
+    </div>
+</body>
+</html>
