--- a/privacy.html
+++ b/privacy.html
@@ -44,7 +44,7 @@
 
         <p><strong>生效日期：</strong>2025年06月03日</p>
 
-        <p>感谢您使用由 tglgx 开发的 Chrome 插件 "纯AI工具箱" (以下简称“本插件”)。</我们非常重视您的隐私。</p>
+        <p>感谢您使用由 tglgx 开发的 Chrome 插件 "纯AI工具箱" (以下简称“本插件”)。我们非常重视您的隐私。</p>
 
         <h2>我们不收集任何个人信息</h2>
         <p>本插件在您的浏览器本地运行，并且：</p>
@@ -54,9 +54,9 @@
             <li><strong>不追踪您的浏览活动：</strong>我们不追踪或记录您的网页浏览历史、搜索记录或您与网页内容的互动。</li>
         </ul>
 
-        <h2>用户设置的本地存储 (如果适用)</h2>
+        <h2>用户设置的本地存储</h2>
         <p>
-            如果本插件提供了用户可配置的设置项 (例如：[此处举例，如：主题颜色、开关状态等，如果没有任何设置，则可以删除此段或修改为“本插件不存储任何用户设置”])，这些设置将仅存储在您浏览器的本地存储空间中 (通常使用 <code>chrome.storage.local</code> API)。这些数据完全由您控制，仅保存在您的计算机上，本插件不会访问、上传或与任何第三方共享这些数据。您可以通过清除浏览器缓存和数据，或卸载本插件来清除这些本地存储的设置。
+            如果本插件提供了用户可配置的设置项 (例如： 快捷键打开Tab配置)，这些设置将仅存储在您浏览器的本地存储空间中 (通常使用 <code>chrome.storage.local</code> API)。这些数据完全由您控制，仅保存在您的计算机上，本插件不会访问、上传或与任何第三方共享这些数据。您可以通过清除浏览器缓存和数据，或卸载本插件来清除这些本地存储的设置。
         </p>
   
         <h2>第三方服务</h2>
